# yong

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt
cloud/: CMakeLists.txt  cloud.c  system.c
common/: bihua.c  book.c  common.c  common.h  dict.c  english.c  expr.c  im.c  im.h  keyboard.c  layout.h  main.c  mapfile.c  nl.c  pinyin.c  s2t.c  translate.h  trie.c  ybus.c
config/: CMakeLists.txt  config_main.c  config_ui.c  session.c  sync.c  update.c
gbk/: CMakeLists.txt  gbk.c
im/: CMakeLists.txt  fbterm.c  ui-common.c  ui-timer.c  ui.c  ybus-xim.c
im/IMdkit/: CMakeLists.txt
im/gtk-im/: CMakeLists.txt
im/qt5-im/: CMakeLists.txt
include/: ui.h  yong.h
llib/: CMakeLists.txt  lconv.c  lfile.c  lkeyfile.c  lmacros.h  lmem.h  lstring.c  lzip.c
mb/: CMakeLists.txt  face.c  fuzzy.c  fuzzy.h  learn.c  mb.c  pyzip.c
py/: CMakeLists.txt  py.cpp  py.h
vim/: CMakeLists.txt  vim.c
